--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>auth-course</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>auth-course</name>
 	<description>Demo project for Spring Boot</description>
 
