--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>war</packaging>
 	<name>auth-course</name>
 	<description>Demo project for Spring Boot</description>
-
+<!-- This is java 8-->
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
